[tool.poetry]
name = "khquizgen"
version = "2.0.0"
description = "Package to randomly autogenerate Kahoot quizzes from notes."
authors = ["BGASM <slatte26@msu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
jellyfish = "^0.8.2"
pandas = "^1.2.3"
openpyxl = "^3.0.7"
dynaconf = "^3.1.4"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.2"
Sphinx = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
